# gitlab-report-commentor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  poster.rs
src/input_formats/: mod.rs  sast.rs
templates/sast/: vulnerability_report.md.hbs  vulnerability_report.md.j2
