[package]
name = "gl-report-mr-poster"
version = "0.1.0+alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
chrono = { version = "0.4.24", features = ["serde"] }
askama = "0.12"